Added editable regions to top 7 projects

--- a/src/_projects/burton-learn-to-ride.html
+++ b/src/_projects/burton-learn-to-ride.html
@@ -17,7 +17,7 @@ tags:
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <div class="content">
+        <div class="content editable">
           <p>Standing sideways since 1977, Burton IS snowboarding in many ways. Learn to Ride — formerly Experience Snowboarding — is a program initiated by Burton in partnership with various resorts all over the world to provide comprehensive learning experiences for riders of every age and ability. From toddlers to first-timers, retirees to park rats, Learn to Ride is a fun, empowering, and exciting program that allow riders, shops and resorts to take their snowboard experience to the next level.</p>
           <p>Working intimately with the team at Burton, Ocupop was able to distill the expansive Experience Snowboarding ecosystem down to a foundation of Burton Learn to Ride (1) programs, (2) product, and (3) places. All focused on learning to ride—that is, whether you’re strapping in for the first time or adding a second or third cork to your spins, you can always learn to ride better, and Burton Learn To Ride programs, products, and places are available at every step of the way.</p>
           <p>Products: Everything from learning-focused boards, boots, and bindings to helmets, kids gear, and industry-chaning step-on bindings.</p>
