--- a/src/_projects/first-launch.html
+++ b/src/_projects/first-launch.html
@@ -19,7 +19,7 @@ tags:
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <div class="content">
+        <div class="content editable">
           <p>FIRST is on a mission to get children ages 6-18 involved in STEM and STEM related fields. Every year FIRST holds a tournament comprising of four different competitions. Each competition presents a new challenge that requires teamwork, communication and STEM principles. Oh, and robots, too.</p>
           <p>All four competitions would need identities that were distinctly different from one another but be tied to the overarching theme. Teaser animations, illustrations and digital marketing assets were developed to spark interest alongside a website introducing the theme and challenges. Apparel and promotional materials were also designed for participants to show their FIRST ‘Stem Squad’ pride.</p>
         </div>
