--- a/src/_projects/kunoa.html
+++ b/src/_projects/kunoa.html
@@ -18,7 +18,7 @@ tags:
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <div class="content">
+        <div class="content editable">
           <p>98% of the beef consumed in Hawaii is imported. Kunoa is changing that. Hawaii’s only vertically integrated cattle company is ushering in a future where food is locally raised with integrity and care. A future where produce and protein is abundant, fresh, and healthy. A future where Hawaii can stand proud and free, flush with local food as rich as the islands themselves.</p>
           <p>The brand aesthetic has been expanded from business cards and pitch decks to ranch uniforms, beef tongue recipes, and countless product packaging and in-store designs. Iconic and brimming with Aloha, Kunoa is thriving in da ‘aina and beyond!</p>
           <p>Kunoa in Hawaiian roughly translates as ‘Stand Free,’ celebrating their core mission of bringing healthy, local food to the people of Hawaii and bolster an Ag industry that not only turns profits for today, but positions the Ag industry for a long, sustainable tomorrow. Because, after all, our food is our future!</p>
