--- a/src/_projects/mapbox-locate.html
+++ b/src/_projects/mapbox-locate.html
@@ -18,7 +18,7 @@ tags:
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <div class="content">
+        <div class="content editable">
           <p>Mapbox leverages the largest, most intelligent open source location platform in the world to power many of the apps we use every day. Facebook, Snapcat, Uber, Vice, Bloomberg, and Ocupop all tap into a remarkably adaptable toolset informed by 350 million miles of live road telemetry data fed into it every day.</p>
           <p>Mapbox recently asked Ocupop to help concept their inaugural user conference at Pier 27 in San Francisco. With the ’Locate’ name already in place, Mapbox needed an entirely new message strategy, branding package, and experience design to ensure the event was well received, and even better attended, by the world’s mapping elite.</p>
           <p>Working on a tight timeline and at a remarkable scale, Ocupop designed the ‘Locate’ visual system to celebrate Mapbox’s authentic position at the leading edge of location data and the passionate community that joins them there. </p>
