Testing Bittercube Editing

--- a/src/_projects/bittercube.html
+++ b/src/_projects/bittercube.html
@@ -5,12 +5,10 @@ client: Bittercube Bitters
 status: active
 summary: 'Bittercube needed to elevate their brand to match the quality and sophistication of their products, philosophy, and team. And once they saw the new logo, every one of ‘em had a new tattoo!'
 completion_date:
+hero_image:
+featured_image:
 gallery:
   - image:
-    caption:
-videos:
-  - title:
-    url:
     caption:
 tags:
   - branding
