Added editable regions.

--- a/src/_projects/burton-learn-to-ride.html
+++ b/src/_projects/burton-learn-to-ride.html
@@ -5,6 +5,8 @@ client: Burton Snowboards
 status: active
 summary: 'Experience Snowboarding’ was a confusing galaxy of products and initiatives. With a ethereal aesthetic and an even more mysterious structure, the whole thing needed to get more down to earth.'
 completion_date: 2013-08-01 00:00:00
+hero_image:
+featured_image:
 gallery:
   - image:
     caption:
