--- a/src/_projects/first-launch.html
+++ b/src/_projects/first-launch.html
@@ -5,6 +5,8 @@ client: FIRST LAUNCH
 status: active
 summary: 'For 2019 Ocupop proposed developing a cohesive theme that would work across all four competitions—something that hadn’t been done in previous years.'
 completion_date: 2019-01-01 00:00:00
+hero_image:
+featured_image:
 gallery:
   - image:
     caption:
