--- a/src/_projects/google-developer-days.html
+++ b/src/_projects/google-developer-days.html
@@ -5,6 +5,8 @@ client: Google
 status: active
 summary: 'A unique challenge: build a brand that resonates across three disparate cultures AND make sure each shares their own authentic slant on building a better web together.'
 completion_date:
+hero_image:
+featured_image:
 gallery:
   - image:
     caption:
