--- a/src/_projects/kunoa.html
+++ b/src/_projects/kunoa.html
@@ -5,6 +5,8 @@ client: Kunoa Cattle Company
 status: active
 summary: 'Passionately supporting Kunoa’s dedication to a sustainable future for Hawaii, Ocupop named the brand, designed the identity, and has served as agency of record since day one.'
 completion_date: 2014-08-20 00:00:00
+hero_image:
+featured_image:
 gallery:
   - image:
     caption:
