--- a/src/_projects/mapbox-locate.html
+++ b/src/_projects/mapbox-locate.html
@@ -5,6 +5,9 @@ title: Like SXSW, only with way more maps!
 client: 'Mapbox: Locate'
 status: active
 summary: 'Mapbox needed a new message strategy and branding to make a lasting impact, and better reflect their company and cutting edge developer products.'
+completion_date:
+hero_image:
+featured_image:
 gallery:
   - image:
     caption:
