--- a/src/contact.html
+++ b/src/contact.html
@@ -6,7 +6,7 @@ title: Contact
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <div class="content">
+        <div class="content editable">
           <p class="lead">What is Ocupop? We’re not entirely sure honestly... Are we Creatives? Graphic designers? Web designers? Maybe web developers? Commercial artists? Trend-spotters? Branding experts? Fashionistas? Computer nerds – Definitely.</p>
           <p>We are, simply speaking, a small shop, with all of the benefits and pit-falls therein. You see what you get; no account executives, no receptionists, no bagels or coffee. The coolest Ocupop Office Funzone® around and the best people in the world.</p>
         </div>
@@ -26,7 +26,7 @@ title: Contact
   <div class="container">
     <div class="row">
       <div class="col">
-        <div class="content">
+        <div class="content editable">
           <h1>What is it like to work with us?</h1>
           <p>We are, simply speaking, a small shop, with all of the benefits and pit-falls therein. You see what you get; no account executives, no receptionists, no bagels or coffee. The coolest <strong>Ocupop Office Funzone®</strong> around and the best people in the world.</p>
         </div>
@@ -38,7 +38,7 @@ title: Contact
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <div class="content">
+        <div class="content editable">
           <h1>Send us a Heyder</h1>
           <p>Ocupop is perpetually pushing the limits of technology, testing and tweaking at the leading edge of what’s possible in a browser. This Joke Station 3000 Webform® feeds an artifically intelligent system painstakingly adapted over time to identify only the most hillarious funnies. See if you can make our robot laugh— he love puns.</p>
         </div>
