--- a/src/sandbox.html
+++ b/src/sandbox.html
@@ -3,20 +3,4 @@ layout: sandbox
 title: sandbox
 ---
 
-<section class="bg-primary full">
-  <div class="row h-100 justify-content-center align-items-center">
-    <div class="col-6">
-      {% include svg/logo-horizontal.svg %}
-    </div>
-  </div>
-</section>
-
-<section>
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-
-      </div>
-    </div>
-  </div>
-</section>
+{% include transition.html %}
