Updated Focus files

--- a/src/_focuses/events.html
+++ b/src/_focuses/events.html
@@ -1,6 +1,6 @@
 ---
 layout: focus
-title: Interiors & Environments
+title: Events
 label: Artwork, Trade Show Materials, Space Planning, Merchandising, Fixture and Furniture Design
 summary_html: 
 featured_image:
