--- a/src/_focuses/web.html
+++ b/src/_focuses/web.html
@@ -1,7 +1,7 @@
 ---
 layout: focus
-title: Identity
-label: Logo Design And Development, Business Cards, Stationary, Usage Guidlines, etc.
+title: Web
+label: Brochure to Enterprise, Databases, CMS, eCommerce
 summary_html: 
 featured_image:
 testimonial:
