work template, related projects, project template, burton ltr, first launch

--- a/src/_projects/4p-foods.html
+++ b/src/_projects/4p-foods.html
@@ -17,6 +17,8 @@ description:
     &amp; friendly appeal balanced with trust and impact.</p>
   results_html:
 pullquote:
+featured_image:
+hero_image:
 gallery:
   - image:
     caption:
