--- a/src/_projects/amper.html
+++ b/src/_projects/amper.html
@@ -19,6 +19,8 @@ description:
     The subtle movement and vibrant color gradients used in the website design
     bring the energy of the multitudes of types of music you can create.</p>
   results_html:
+featured_image:
+hero_image:  
 gallery:
   - image:
     caption:
