--- a/src/_projects/bittercube.html
+++ b/src/_projects/bittercube.html
@@ -32,6 +32,8 @@ description:
     illustrations for each product offering.</p>
   results_html:
 completion_date:
+featured_image:
+hero_image:
 gallery:
   - image:
     caption:
