--- a/src/_projects/burton-learn-to-ride.html
+++ b/src/_projects/burton-learn-to-ride.html
@@ -17,6 +17,8 @@ description:
     <p>With this clearly defined taxonomy in place, our team moved ahead to create a visual identity that represented the initiative and its mission to reach and instruct current and future snowboarders all over the world. The identity had to visually convey instruction, levels of skill, and snowboarding in general while being globally and universally recognizable.</p>
   results_html:
 completion_date: 2013-08-01 00:00:00
+featured_image: /assets/img/projects/burtonltr-project/burtonltr-feature.jpg
+hero_image: /assets/img/projects/burtonltr-project/burtonltr-hero.jpg
 gallery:
   - image:
     caption:
@@ -29,4 +31,87 @@ tags:
   - branding
   - web
 ---
+
+<section class="pt-0">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="content">
+          <p class="lead">
+            ‘Experience Snowboarding’ was a confusing galaxy of products and initiatives. With a ethereal aesthetic and an even more mysterious structure, the whole thing needed to get more down to earth.
+          </p>
+          <p>Standing sideways since 1977, Burton IS snowboarding in many ways. Learn to Ride — formerly Experience Snowboarding — is a program initiated by Burton in partnership with various resorts all over the world to provide comprehensive learning experiences for riders of every age and ability. From toddlers to first-timers, retirees to park rats, Learn to Ride is a fun, empowering, and exciting program that allow riders, shops and resorts to take their snowboard experience to the next level.</p>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="content">
+          <h4>Products</h4>
+          <p>Everything from learning-focused boards, boots, and bindings to helmets, kids gear, and industry-changing step-on bindings.</p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="content">
+          <h4>Programs</h4>
+          <p>Rider-designed instructor courses, teen camps, women’s camps, the industry’s best product demos and resort rental offerings.</p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="content">
+          <h4>Places</h4>
+          <p>Toddler-sized Riglet parts, Burton Learn To Ride beginner to advanced terrain parks, branded natural terrain, and beyond.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<div class="bg-image aspect-hero" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-01.jpg)"></div>
+<section class="bg-dark text-white">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="content">
+          <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-02.jpg)"></div>
+          <p class="lead mt-5">Which run will you take? No matter whether it’s the chutes and steeps or the bunny hill — Learn to Ride is down to take some laps.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <div class="content">
+          <div class="row">
+            <div class="col-md-4">
+              <div class="d-flex h-100 flex-column justify-content-between">
+                <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-03.jpg)"></div>
+                <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-05.jpg)"></div>
+              </div>
+            </div>
+            <div class="col-md-8">
+              <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-04.jpg)"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <div class="content">
+          <p>Learn to Ride isn’t just kids and beginners— every element of the initiative (and the brand) is designed to encourage and enable improvement at all levels of riding. To this end, Ocupop also established the augmented brand of Burton Learn To Ride+ for more advanced programs, products, and places.</p>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <div class="content">
+          <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-06.jpg)"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
