--- a/src/_projects/daughter-mfg.html
+++ b/src/_projects/daughter-mfg.html
@@ -26,6 +26,8 @@ description:
     brand.&nbsp;</p>
   results_html:
 completion_date:
+featured_image:
+hero_image:
 gallery:
   - image:
     caption:
