--- a/src/_projects/first-inspires.html
+++ b/src/_projects/first-inspires.html
@@ -25,6 +25,8 @@ description:
     as fun STEM related infographics, Illustrations, and event banners.</p>
   results_html:
 completion_date: 2018-01-31 00:00:00
+featured_image:
+hero_image:
 gallery:
   - image:
     caption:
