--- a/src/_projects/google-chrome-dev-summit.html
+++ b/src/_projects/google-chrome-dev-summit.html
@@ -20,6 +20,8 @@ description:
     of the web, and sense of wonder it creates.</p>
   results_html:
 completion_date:
+featured_image:
+hero_image:
 gallery:
   - image:
     caption:
