--- a/src/_projects/google-developer-days.html
+++ b/src/_projects/google-developer-days.html
@@ -27,6 +27,8 @@ description:
     assets, animation, and swag items.&nbsp;</p>
   results_html:
 completion_date:
+featured_image:
+hero_image:
 gallery:
   - image:
     caption:
