--- a/src/_projects/heirloom.html
+++ b/src/_projects/heirloom.html
@@ -24,6 +24,8 @@ description:
     of all natural botanicals.</p>
   results_html:
 completion_date:
+featured_image:
+hero_image:
 gallery:
   - image:
     caption:
