--- a/src/_projects/homes-by-towne.html
+++ b/src/_projects/homes-by-towne.html
@@ -25,6 +25,8 @@ description:
     have.</p>
   results_html:
 completion_date: 2018-09-11 00:00:00
+featured_image:
+hero_image:
 gallery:
   - image:
     caption:
