--- a/src/_projects/html-5.html
+++ b/src/_projects/html-5.html
@@ -19,6 +19,8 @@ description:
     source just as many of frameworks that power the web.<br />&nbsp;</p>
   results_html:
 completion_date: 2011-03-10 00:00:00
+featured_image:
+hero_image:
 gallery:
   - image:
     caption:
