--- a/src/_projects/kunoa.html
+++ b/src/_projects/kunoa.html
@@ -20,6 +20,8 @@ description:
     practices and create a local food community.</p>
   results_html:
 completion_date: 2014-08-20 00:00:00
+featured_image:
+hero_image:
 gallery:
   - image:
     caption:
