--- a/src/_projects/polymer.html
+++ b/src/_projects/polymer.html
@@ -17,6 +17,8 @@ description:
     Platform"</p>
   results_html:
 completion_date: 2017-08-23 00:00:00
+featured_image:
+hero_image:
 gallery:
   - image:
     caption:
