--- a/src/_projects/refed.html
+++ b/src/_projects/refed.html
@@ -23,6 +23,8 @@ description:
     Report and stakeholder papers, a website and additional web tools.</p>
   results_html:
 completion_date: 2016-09-30 00:00:00
+featured_image:
+hero_image:
 gallery:
   - image:
     caption:
