--- a/src/_projects/w3c.html
+++ b/src/_projects/w3c.html
@@ -18,6 +18,8 @@ description:
     last 7 years.</p>
   results_html:
 completion_date: 2018-05-31 00:00:00
+featured_image:
+hero_image:
 gallery:
   - image:
     caption:
