--- a/src/_projects/widevine.html
+++ b/src/_projects/widevine.html
@@ -22,6 +22,8 @@ description:
     identity.</p>
   results_html:
 completion_date: 2018-04-20 00:00:00
+featured_image:
+hero_image:
 gallery:
   - image:
     caption:
