--- a/src/_projects/google-cloud.html
+++ b/src/_projects/google-cloud.html
@@ -18,6 +18,8 @@ description:
     world.</p>
   results_html:
 completion_date: 2018-09-12 00:00:00
+featured_image:
+hero_image:
 gallery:
   - image:
     caption:
