--- a/src/_projects/ietf.html
+++ b/src/_projects/ietf.html
@@ -38,6 +38,8 @@ description:
     or shield</p>
   results_html:
 completion_date: 2018-09-15 12:28:14
+featured_image:
+hero_image:
 gallery:
   - image:
     caption:
