--- a/src/_projects/mapbox-locate.html
+++ b/src/_projects/mapbox-locate.html
@@ -14,6 +14,8 @@ description:
   solution_html: >-
     <p>Working on a tight timeline we designed a new identity system that showcases Mapbox as an emerging light among map providers. We strategized and realized marketing campaigns for the event that explored the edges of design via interactive billboards, immersive stage animations, and futuristic signage.</p>
   results_html:
+featured_image:
+hero_image:  
 gallery:
   - image:
     caption:
