--- a/src/_projects/schreyer-construction.html
+++ b/src/_projects/schreyer-construction.html
@@ -15,6 +15,8 @@ description:
     communicate their extensive portfolio and services.</p>
   results_html:
 completion_date: 2016-12-31 00:00:00
+featured_image:
+hero_image:
 gallery:
   - image:
     caption:
