--- a/src/_projects/sustainable-america.html
+++ b/src/_projects/sustainable-america.html
@@ -18,6 +18,8 @@ description:
     initiatives, and animations.</p>
   results_html:
 completion_date: 2018-08-31 00:00:00
+featured_image:
+hero_image:
 gallery:
   - image:
     caption:
