--- a/src/_projects/sxsw.html
+++ b/src/_projects/sxsw.html
@@ -19,6 +19,8 @@ description:
     online.</p>
   results_html:
 completion_date: 2017-03-15 00:00:00
+featured_image:
+hero_image:
 gallery:
   - image:
     caption:
