--- a/src/_projects/tensorflow-dev-summit.html
+++ b/src/_projects/tensorflow-dev-summit.html
@@ -22,6 +22,8 @@ description:
     stickers to stage design and opening animations.</p>
   results_html:
 completion_date:
+featured_image:
+hero_image:
 gallery:
   - image:
     caption:
