--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@ title: Home
 ---
 {% include transition.html %}
 
+
 <section>
   <div class="container">
     <div class="row">
@@ -14,7 +15,7 @@ title: Home
         </div>
       </div>
     </div>
-    <div class="row">
+    <div id="home-copy" class="row">
       <div class="col-12">
         <div class="content editable">
           <p>Yeah. No. That’s complete bullshit. Though we have tons of testimonials exalting the breadth of our awesomeness (from Jeff’s beard to Michael’s hair to Abby’s quality nicknames to even our work itself), this quote is made up, but it’s what we expect every client to say after working with Ocupop.</p>
@@ -22,11 +23,8 @@ title: Home
         </div>
       </div>
     </div>
-  </div>
-</section>
-<section>
-  <div class="container">
-    <div class="row">
+
+    <div id="photo-grid" class="row">
       <div class="col">
         <div class="content">
           <div class="row">
@@ -53,6 +51,13 @@ title: Home
     </div>
   </div>
 </section>
+
+<section>
+  <div class="container">
+
+  </div>
+</section>
+
 <section class="bg-dark text-white">
   <div class="container">
     <div class="row align-items-center">
