--- a/src/_projects/first-launch.html
+++ b/src/_projects/first-launch.html
@@ -18,7 +18,7 @@ tags:
   - web
 ---
 
-<section>
+<section class="pt-0">
   <div class="container">
     <div class="row">
       <div class="col-md-6">
@@ -35,7 +35,7 @@ tags:
     <div class="row">
       <div class="col-12">
         <div class="content">
-          <p>All four competitions would need identities that were distinctly di erent from one another but be tied to the overarching theme. Teaser animations, illustrations and digital marketing assets were developed to spark interest alongside a website introducing the theme and challenges. Apparel and promotional materials were also designed for participants to show their FIRST ‘Stem Squad’ pride.</p>
+          <p class="lead">All four competitions would need identities that were distinctly di erent from one another but be tied to the overarching theme. Teaser animations, illustrations and digital marketing assets were developed to spark interest alongside a website introducing the theme and challenges. Apparel and promotional materials were also designed for participants to show their FIRST ‘Stem Squad’ pride.</p>
         </div>
       </div>
     </div>
