updated layout for about and focus

--- a/src/about.html
+++ b/src/about.html
@@ -6,9 +6,13 @@ title: About
 <section class="bg-light">
   <div class="container">
     <div class="row">
-      <div class="col-12">
+      <div class="col-12 col-md-8">
         <div class="content editable">
           <p class="lead">We’re in this game to make our clients’ brands perform and we will fight and scrap and claw and beg until we’re satisfied that the result is nothing short of exemplary.</p>
+        </div>
+      </div>
+      <div class="col-12 col-md-4">
+        <div class="content editable">
           <p>So, if you are looking for switchboards, hold music, synergy, ideation, and enough buzz-words to fill a conference room, we’re probably not the ONE. But, if you love what you do and are proud of your company, your product and your employees, chances are we might fit right in. We thrive on relationships of mutual respect, commitment and enjoyment – WITH our clients, our collaborators and each other; we’re all in this together right?</p>
         </div>
       </div>
