--- a/src/focus.html
+++ b/src/focus.html
@@ -5,12 +5,12 @@ title: Focus
 <section class="bg-light">
   <div class="container">
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-12 col-md-8">
         <div class="content editable">
           <p class="lead">Our smaller size affords us the agility to adapt to clients’ individual circumstances, while our experience, ingenuity, and unwillingness to sleep assures insightful, holistic, sustainable solutions in all variety of creative capacities.</p>
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-12 col-md-4">
         <div class="content editable">
           <p>For almost two decades, we have left a wake of satisfied customers and quality work in our path—so drop us a line, because we’re Ocupop, and that’s two O’s, two P’s and YOU! ...see that is the sort of shit we’re talking about, brilliant!</p>
         </div>
