Added Focus Illustrations

--- a/src/_focuses/branding.html
+++ b/src/_focuses/branding.html
@@ -3,7 +3,7 @@ layout: focus
 title: Branding
 label: Logo Design and Development, Collateral, Usage Guidelines
 summary_html: 
-featured_image:
+featured_image: /assets/img/focuses/ocupop-focus-branding.svg
 testimonial:
   quote: 
   author: 
