--- a/src/_focuses/animation.html
+++ b/src/_focuses/animation.html
@@ -3,6 +3,6 @@ layout: focus
 title: Animation
 label: Show Openers, Teasers, Motion Graphics, Traditional, Vector-Based, CGI
 summary_html:
-featured_image:
+featured_image: /assets/img/focuses/ocupop-focus-animation.svg
 projects:
 ---
