--- a/src/_focuses/illustration.html
+++ b/src/_focuses/illustration.html
@@ -3,7 +3,7 @@ layout: focus
 title: Illustration
 label: Infographics, Scenics, Iconography, Traditional, Vector-Based
 summary_html:
-featured_image:
+featured_image: /assets/img/focuses/ocupop-focus-illustration.svg
 testimonial:
   quote: 
   author: 
