--- a/src/_projects/bittercube.html
+++ b/src/_projects/bittercube.html
@@ -5,24 +5,78 @@ client: Bittercube Bitters
 status: active
 summary: 'Bittercube needed to elevate their brand to match the quality and sophistication of their products, philosophy, and team. And once they saw the new logo, every one of ‘em had a new tattoo!'
 completion_date:
-hero_image:
-featured_image:
+hero_image: /assets/img/projects/bittercube-project/bittercube-hero.jpg
+featured_image: /assets/img/projects/bittercube-project/bittercube-feature.jpg
 tags:
   - branding
   - web
   - illustration
 ---
 
-<section>
+<section class="pt-0">
   <div class="container">
     <div class="row">
       <div class="col-12">
         <div class="content editable">
-          <p>Bittercube Bitters slow crafts bitters using all natural ingredients, and no extracts of any kind. Hailing from Milwaukee and Minneapolis, Bittercube has been in the craft cocktail industry since 2009.</p>
-          <p>Early in the research and brand strategy phase of this project, we decided that it would be ideal to maintain the individual elements of the existing ID if at all possible. The dropper and cube of bitters nearly phonetically spelled out the brand name and always kept the hand-crafted feel front and center. With Bittercube’s passion for true craftsmanship and commitment to producing their bitters by hand, with care, we saw an opportunity to apply the same ideas to their rebrand. We created a custom wordmark/logotype and bespoke, hand drawn illustrations for each product offering.</p>
-          <p>Some of the boys proudly sharing their new ink. #Bittercube4lyfe!</p>
+          <p class="lead">Bittercube Bitters slow crafts bitters using all natural ingredients, and no extracts of any kind. Hailing from Milwaukee and Minneapolis, Bittercube has been in the craft cocktail industry since 2009.</p>
+          <p>Bittercube needed to elevate their brand to match the quality and sophistication of their products, philosophy, and
+          team. And once they saw the new logo, every one of ‘em had a new tattoo!</p>
         </div> 
       </div>
     </div>
   </div>
+</section>
+<section class="bg-navy text-white">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-md-5">
+        <div class="content">
+          <img src="/assets/img/projects/bittercube-project/bittercube-project-01.png" class="img-fluid" alt="Bittercube Logo">
+        </div>
+      </div>
+      <div class="col-md-7">
+        <div class="content">
+          <p>Early in the research and brand strategy phase of this project, we decided that it would be ideal to maintain the
+          individual elements of the original ID if at all possible. The dropper and cube of bitters nearly phonetically spelled
+          out the brand name and always kept the hand-cra ed feel front and center. With Bittercube’s passion for true cra
+          smanship and commitment to producing their bitters by hand, with care, we saw an opportunity to apply the same ideas to
+          their rebrand.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section>
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="content">
+          <img src="/assets/img/projects/bittercube-project/bittercube-project-02.jpg" class="img-fluid" alt="Bittercube Bitters image">
+          <p class="lead mt-5">We created a custom wordmark and bespoke, hand drawn illustrations for each product offering.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="bg-image aspect-hero" style="background-image: url('/assets/img/projects/bittercube-project/bittercube-project-03.jpg');">
+
+</section>
+<section>
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-md-4">
+        <div class="content">
+          <img src="/assets/img/projects/bittercube-project/bittercube-project-04.jpg" class="img-fluid" alt="Bittercube logo tattoo image">
+        </div>
+      </div>
+      <div class="col-md-8">
+        <div class="content">
+          <p class="lead">One of the boys proudly sharing his new ink. #Bittercube4lyfe!</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="bg-image aspect-hero" style="background-image: url('/assets/img/projects/bittercube-project/bittercube-project-05.jpg');">
+
 </section>
