kunoa project, about page layout, add staff

--- a/src/_projects/kunoa.html
+++ b/src/_projects/kunoa.html
@@ -5,25 +5,91 @@ client: Kunoa Cattle Company
 status: active
 summary: 'Passionately supporting Kunoa’s dedication to a sustainable future for Hawaii, Ocupop named the brand, designed the identity, and has served as agency of record since day one.'
 completion_date: 2014-08-20 00:00:00
-featured_image:
-hero_image:
-gallery:
-  - image:
-    caption:
+featured_image: /assets/img/projects/kunoa/kunoa-feature.jpg
+hero_image: /assets/img/projects/kunoa/kunoa-hero.jpg
 tags:
   - branding
   - web
   - illustration
 ---
 
+<section class="pt-0">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-7">
+        <div class="content editable">
+          <p>98% of the beef consumed in Hawaii is imported. Kunoa is changing that. Hawaii’s only vertically integrated cattle company is ushering in a future where food is locally raised with integrity and care. A future where produce and protein is abundant, fresh, and healthy. A future where Hawaii can stand proud and free, flush with local food as rich as the islands themselves.</p>
+        </div>
+      </div>
+      <div class="col-md-5">
+        <div class="content">
+          <p class="lead">Passionately supporting Kunoa’s dedication to a sustainable future for Hawaii, Ocupop named the brand, designed the identity, and has served as agency of record since day one.</p>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <div class="content">
+          <img src="/assets/img/projects/kunoa/kunoa-project-01.jpg" class="img-fluid" alt="Kunoa Postcard image">
+        </div>
+      </div>
+      <div class="col-12">
+        <div class="content">
+          <p class="mt-5">The brand aesthetic has been expanded from business cards and pitch decks to ranch uniforms, beef tongue recipes, and
+          countless product packaging and in-store designs. Iconic and brimming with Aloha, Kunoa is thriving in da ‘aina and
+          beyond!</p>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="content">
+          <div class="bg-image aspect-5x7" style="background-image: url('/assets/img/projects/kunoa/kunoa-project-02.jpg')"></div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="content">
+          <div class="bg-image aspect-5x7" style="background-image: url('/assets/img/projects/kunoa/kunoa-project-03.jpg')"></div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <div class="content">
+          <p class="lead">
+            Kunoa in Hawaiian roughly translates as ‘Stand Free,’ celebrating their core mission of bringing healthy, local food to
+            the people of Hawaii and bolster an Ag industry that not only turns pro ts for today, but positions the Ag industry for
+            a long, sustainable tomorrow. Because, a er all, our food is our future!
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="bg-image aspect-hero" style="background-image: url('/assets/img/projects/kunoa/kunoa-project-04.jpg')">
+
+</section>
 <section>
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <div class="content editable">
-          <p>98% of the beef consumed in Hawaii is imported. Kunoa is changing that. Hawaii’s only vertically integrated cattle company is ushering in a future where food is locally raised with integrity and care. A future where produce and protein is abundant, fresh, and healthy. A future where Hawaii can stand proud and free, flush with local food as rich as the islands themselves.</p>
-          <p>The brand aesthetic has been expanded from business cards and pitch decks to ranch uniforms, beef tongue recipes, and countless product packaging and in-store designs. Iconic and brimming with Aloha, Kunoa is thriving in da ‘aina and beyond!</p>
-          <p>Kunoa in Hawaiian roughly translates as ‘Stand Free,’ celebrating their core mission of bringing healthy, local food to the people of Hawaii and bolster an Ag industry that not only turns profits for today, but positions the Ag industry for a long, sustainable tomorrow. Because, after all, our food is our future!</p>
+        <div class="content">
+          <div class="row">
+            <div class="col-12">
+              <div class="bg-image aspect-4x3" style="background-image: url('/assets/img/projects/kunoa/kunoa-project-05.jpg')"></div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-4">
+              <div class="bg-image aspect-1x1 mt-4" style="background-image: url('/assets/img/projects/kunoa/kunoa-project-06.jpg')"></div>
+            </div>
+            <div class="col-md-4">
+              <div class="bg-image aspect-1x1 mt-4" style="background-image: url('/assets/img/projects/kunoa/kunoa-project-07.jpg')"></div>
+            </div>
+            <div class="col-md-4">
+              <div class="bg-image aspect-1x1 mt-4" style="background-image: url('/assets/img/projects/kunoa/kunoa-project-08.jpg')"></div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
